recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:8: error: unclosed comment
  pentaKoch(levels-1,length/*0.4)
                           ^PentaKoch:8: error: unclosed comment
  pentaKoch(levels-1,length/*0.4)
                           ^PentaKoch:8: error: unclosed comment
  pentaKoch(levels-1,length/*0.4)
                           ^PentaKoch:1: error: Missing closing brace `}' assumed here
def pentaKoch(levels:Int, length:Double) {
^PentaKoch:1: error: expected class or object definition
def pentaKoch(levels:Int, length:Double) {
^PentaKoch:5: error: expected class or object definition
  baisseCrayon()
  ^PentaKoch:6: error: expected class or object definition
  pentaKoch(levels-1,length*0.4)
  ^PentaKoch:7: error: expected class or object definition
  gauche(72)
  ^PentaKoch:8: error: expected class or object definition
  pentaKoch(levels-1,length/*0.4)
  ^PentaKoch:8: error: unclosed comment
  pentaKoch(levels-1,length/*0.4)
                           ^