recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
      avance(length)
    return
  }
  baisseCrayon()
  pentaKoch(levels-1,length*0.4)
  gauche(72)
  pentaKoch(levels-1,length/*0.4)
  droite(72)
  pentaKoch(levels-1,length/0.4)
  droite(72)
  pentaKoch(levels-1,length/0.4)
	droite(72)
  pentaKoch(levels-1,length/0.4)
  droite(72)
  pentaKoch(levels-1,length/0.4)
  gauche(72)
  leveCrayon()
}